2007-03-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.desktop.in:
	Remove Application from Categories and Add Video.

2007-03-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/nose-run:
	* tools/pydoctor:
	Add proper quoting.

2007-03-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/enclib.py:
	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_agents/open.py:
	* gaupol/gtk/_agents/save.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/dialogs/about.py:
	* gaupol/gtk/dialogs/file.py:
	* gaupol/gtk/dialogs/split.py:
	* gaupol/langlib.py:
	* setup.py:
	Added "Insert Subtitles...", "Remove Subtitles" and "Find And Replace"
	to the main toolbar. Fixed minor quotation inconsistensies.

2007-03-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_actions/format.py:
	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_actions/search.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_agents/edit.py:
	* gaupol/gtk/_agents/search.py:
	* gaupol/gtk/app.py:
	Add "Text" menu and move items from "Edit", "Format" and "Search"
	menus there. Relabel some menu items.

2007-03-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/enclib.py:
	Updated URLs.

2007-03-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/pydoctor:
	Browse not by default.

2007-03-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_agents/edit.py:
	Remove Alt+Arrow keybindings and add "edit_next_value" UI manager
	action bound to the space key.

2007-03-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/data/code.css:
	* tools/data/footer.html:
	* tools/data/header.html:
	* tools/py2html:
	* tools/pydoctor:
	Use highlight instead of py2html.

2007-03-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/data/pylintrc:
	* tools/pylint:
	Adjust to Pylint 0.13.

2007-03-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py: